--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,10 +2,31 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css" />
+  <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
 </head>
 <body>
-  <form method="POST">
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $('form').submit(function(e){
+        e.preventDefault();
+        $.ajax({
+          url: "/",
+          method: 'POST',
+          dataType: 'json',
+          data: JSON.stringify({ url: $('input').val() }),
+          success: function(data){
+            console.log('success!!!!', data);
+          }
+
+        });
+      })
+    });
+    </script>
+
+  <form method="POST" action="/">
     <input type="input" name="url"></input>
+    <input type="submit" value="submit">
   </form>
 </body>
 </html>
